# library_management_system

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/authentication/: serializers.py  tasks.py  urls.py  views.py
backend/authentication/templates/email/: password-reset-mail.html  password-reset-success.html
backend/library_management/: models.py  serializers.py  urls.py  views.py
backend/lms_project/: settings.py  urls.py  wsgi.py
backend/members/: models.py  serializers.py  urls.py  views.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Custom-style.css  Layout.jsx  main.jsx
frontend/src/Services/Authentication/: API-Request.jsx  CsrfTokenObtainer.jsx
frontend/src/Services/LMS/: API-Request.jsx
frontend/src/components/DashBoardCard/: index.jsx
frontend/src/components/Header/: headernav.css  index.jsx
frontend/src/components/Insight/: Insight.jsx
frontend/src/components/Loader/: DNALoader.jsx  TriangleLoader.jsx  index.jsx  loader.css
frontend/src/components/NavBar/: Navbar.css  index.jsx
frontend/src/components/QuickLink/: QuickLink.jsx
frontend/src/components/SideBar/: Sidebar.css  index.jsx
frontend/src/context/: AuthContext.jsx  ManagementContext.jsx
frontend/src/hooks/: useFetchData.jsx
frontend/src/pages/Authentication/: Authentication.css  EditUserProfilePage.jsx  OTPRequestPage.jsx  ResetPasswordPage.jsx  SignInPage.jsx  SignUpPage.jsx  UpdatePasswordPage.jsx  (+1 more)
frontend/src/utils/: FormatDate.jsx  PrivateRoute.jsx  axiosInstance.jsx
(+7 files in other folders)
